--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
         "@web3-react/core": "^6.1.9",
+        "antd": "^4.19.5",
         "axios": "^0.26.1",
         "dotenv": "^16.0.0",
+        "ethers": "^5.6.2",
         "node-sass": "^4.11.0",
         "postcss": "^8.4.5",
         "postcss-cli": "^9.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-redux": "^7.2.6",
         "react-router-dom": "5.2.0",
         "react-scripts": "4.0.3",
@@ -33,8 +36,7 @@
     "scripts": {
         "css": "postcss src/style/tailwind.css -o src/style/index.css",
         "watch:css": "postcss src/style/tailwind.css -o src/style/main.css",
-        "dev": "set PORT=80 && env-cmd -f .env.dev react-scripts start",
-        "dev:local": "set PORT=80 && env-cmd -f .env.local react-scripts start",
+        "dev": "set PORT=80 && react-scripts start",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
